<resources>
    <string name="app_name">蓝枫日记</string>
    <string name="auto_theme_change">theme follow the time?</string>
    <string name="passkey_len_str">length of passkey</string>
    <string name="menu_settings">Settings</string>
    <string name="add_button">ADD</string>
    <string name="delete_button">DELETE</string>
    <string name="submit_text">SUBMIT</string>
    <string name="shot_img">first_of_allImage</string>
    <string name="getPlace_button">GPS</string>
    <string name="title_hint">标题(选填)</string>
    <string name="text_content_hint">记录您的美好时光</string>
    <string name="gps">还没有获取位置</string>
    <string name="edit_diary">编辑日记</string>
    <string name="empty_diary">清空内容</string>
    <string name="write_diary">写日记</string>
    <string name="back">BACK</string>
    <string name="edit">EDIT</string>
    <string name="myDiary">我的日记</string>
    <string name="time_pre">time</string>
    <string name="title_pre">title</string>
    <string name="location_pre">location</string>
    <string name="content_pre">content</string>
    <string name="back_add">back</string>
    <string name="push_add">push</string>
    <string name="single_image">SINGLE IMAGE</string>
    <string name="password">please input the password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="password_dialog">Locked</string>
    <string name="getpassword">请输入密码！</string>
</resources>
